<resources>
    <string name="app_name">3.9_practical_work</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="gallery">галерея</string>
    <string name="content_description_gallery">изображения, сохраненные пользователем</string>
    <string name="search">поиск</string>
    <string name="content_description_search">поиск в приложении</string>
    <string name="more">еще</string>
    <string name="content_description_more">дополнительные возможности</string>

</resources>
